@@ -18,6 +18,7 @@ Added: Support for concurrent execution for invocationCount=1 threadPoolSize>1 a
 (http://forums.opensymphony.com/thread.jspa?threadID=64738&tstart=0)
 Added: New TestNG specific XML report, generated by default in 'xml' subdirectory of test-output
 Added: support in strprotocol for passing the ITest.getTestName() information
+Fixed: TESTNG-152 If DataProvider is not found, the exception message should tell exactly what happened
 
 Eclipse plug-in
 
